# wasmer-tests

./: Cargo.toml
modules/simple-add-wasm/: Cargo.toml
modules/simple-add-wasm/src/: lib.rs
src/: main.rs
