[package]
name = "wasmer-tests"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
wasmer = { version = "4",  features = ["engine", "wat", "cranelift"], default-features = false}

[workspace]
members = ["./modules/simple-add-wasm/"]

[profile.release.package."simple-add-wasm"]
opt-level = 3
